KPluginSelector::addPlugins: fix assert if 'config' parameter is default

REVIEW:126423
BUG:352471